
- Added tox.ini for testing purposes.

- Fix select dropdown behavior on Firefox by fixing CSS (closes
  http://bugs.repoze.org/issue152).

- Removed ``wufoo.css``, minimized ``form.css``.  Changed templates around to
  deal with CSS changes.

- Sequence widgets now accept a min_len and a max_len argument, which
  influences its display of close and add buttons.

- Depend on Chameleon<1.999 (deform doesn't yet work with Chameleon 2).

0.8.1 (2010-12-17)
------------------

Features
~~~~~~~~

- Allow ``deform.form.Button`` class to be passed a ``disabled`` flag (false
  by default).  If a Button is disabled, its HTML ``disabled`` setting will
  be set true.

0.8 (2010-12-02)
----------------

Features
~~~~~~~~

- Added Polish locale data: thanks to Marcin Lulek.

Bug Fixes
~~~~~~~~~

- Fix dynamic sequence item adding on Chrome and Firefox 4.  Previously if
  there was a validation error rendering a set of sequence items, the "add
  more" link would be rendered outside the form, which would cause it to not
  work.  Wrapping the sequence item <li> element in a <ul> fixed this.

0.7 (2010-10-10)
----------------

Features
~~~~~~~~

- Added Danish locale.

- Added Spanish locale:  thanks to David Cerna for the translations!

- ``DatePartsWidget`` now renders error "Required" if all blank or
  "Incomplete" if partially blank for consistency with the other widgets.

- Different styling involving <li> and <ul> for checkbox choice,
  checked input, radio choice, checked password, and dateparts widgets
  (via Ergo^). See http://bugs.repoze.org/issue165.

Dependencies
~~~~~~~~~~~~

- Deform now depends on ``colander`` version 0.8 or better (the demo
  wants to use schema bindings).

- Deform now depends on ``Chameleon`` (uppercase) rather than
  ``chameleon`` to allow for non-PyPI servers.

Demo
~~~~

- New addition to the demonstration application: schema binding.

0.6 (2010-09-03)
----------------

Features
~~~~~~~~
